--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,55 @@
-.App {
+.main {
+  position: relative;
+  margin-right: -8px;
+  margin-left: -8px;
+  margin-top: -8px;
+  height: 100%;
+}
+
+header {
+  box-shadow: 0px 2px 4px #d4d2d2;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-items {
+  list-style: none;
+  display: flex;
+}
+
+.nav .img {
+  width: 60px;
+}
+
+.nav-items > li {
+  padding: 10px;
+  cursor: pointer;
+}
+
+h1 {
+  padding-top: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.list {
+  list-style-position: inside;
+  text-align: center;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.list > li {
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+footer {
+  position: fixed;
+  width: 100%;
+  text-align: center;
+  background-color: lightblue;
+  bottom: 0;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
