--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,24 +1,36 @@
 .main {
-  position: relative;
+  position: fixed;
   margin-right: -8px;
   margin-left: -8px;
   margin-top: -8px;
   height: 100%;
+  width: 100%;
+  color: white;
+  background-color: #2b2a2aff;
 }
 
 header {
-  box-shadow: 0px 2px 4px #d4d2d2;
+  box-shadow: 0px 2px 4px #242424;
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: black;
+}
+
+.nav h1 {
+  font-size: 25px;
+  color: lightblue;
+  margin-top: auto;
+  margin-right: auto;
 }
 
 .nav-items {
   list-style: none;
   display: flex;
+  color: white;
 }
 
 .nav .img {
@@ -28,6 +40,7 @@ header {
 .nav-items > li {
   padding: 10px;
   cursor: pointer;
+  font-size: 20px;
 }
 
 h1 {
@@ -37,12 +50,14 @@ h1 {
 
 .list {
   list-style-position: inside;
+  list-style-type: circle;
   text-align: center;
   padding: 10px;
 }
 
 .list > li {
   padding: 10px;
+  font-size: 20px;;
 }
 
 footer {
