--- a/digital_business_card/src/App.css
+++ b/digital_business_card/src/App.css
@@ -8,7 +8,7 @@
     text-align: center;
     position: relative;
     background-color: rgb(31, 30, 30);
-    height: 100%;
+    height: 100vh;
     width: 100%;
     color: white;
 }
@@ -75,4 +75,25 @@
     transition: 0.5s;
     background-color: white;
     color: black
+}
+
+.about {
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+
+.interests {
+    padding-bottom: 30px;
+}
+
+.icon {
+    position: fixed;
+    width: 100%;
+    background-color: rgb(37, 36, 36);
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    bottom: 0;
 }
