--- a/airbnb_clone/src/Components/Card/Card.css
+++ b/airbnb_clone/src/Components/Card/Card.css
@@ -6,6 +6,16 @@
     margin-top: 40px;
 }
 
+.profile p{
+    position: absolute;
+    border-radius: 3px;
+    text-align: center;
+    background-color: white;
+    width: 90px;
+    height: 20px;
+    left: 1%;
+}
+
 .photo {
     margin-left: 10%;
     width: 200px;
