--- a/props/src/Components/Contact.css
+++ b/props/src/Components/Contact.css
@@ -4,12 +4,16 @@
     box-sizing: border-box;
 }
 
+.contacts {
+    margin-bottom: 30px;
+}
+
 .contact-card {
     position: relative;
     box-shadow:  0px 2px 4px #242424;
     border-radius: 15px;
-    width: 45%;
-    height: 28vh;
+    width: 350px;
+    height: 350px;
     left: 20px;
     top: 20px;
 }
@@ -17,7 +21,7 @@
 img {
     width: 300px;
     border-radius: 15px;
-    margin-left: 11px;
+    margin-left: 25px;
     margin-top: 10px;
 }
 
