--- a/airbnb_clone/src/Components/Card/Card.css
+++ b/airbnb_clone/src/Components/Card/Card.css
@@ -8,17 +8,19 @@
 
 .profile p{
     position: absolute;
-    border-radius: 3px;
+    border-radius: 5px;
     text-align: center;
     background-color: white;
     width: 90px;
     height: 20px;
-    left: 1%;
+    margin-left: 30px;
 }
 
 .photo {
     margin-left: 10%;
-    width: 200px;
+    border-radius: 10px;
+    width: 220px;
+    height: 300px;
 }
 
 .details {
@@ -44,11 +46,11 @@
 
 .text-1 {
     margin-left: 10%;
-    width: 30%;
+    width: 100%
 }
 
 .text-2 {
     margin-top: 10px;
-    width: 30%;
+    width: 100%;
     margin-left: 10%;
 }
