--- a/airbnb_clone/src/Components/Card/Card.css
+++ b/airbnb_clone/src/Components/Card/Card.css
@@ -8,11 +8,12 @@
 
 .profile p{
     position: absolute;
-    border-radius: 5px;
+    border-radius: 2px;
     text-align: center;
     background-color: white;
     width: 90px;
-    height: 20px;
+    padding-top: 3px;
+    height: 30px;
     margin-left: 30px;
 }
 
