--- a/meme_generator/src/Components/Form/Form.css
+++ b/meme_generator/src/Components/Form/Form.css
@@ -18,6 +18,10 @@
     cursor: pointer;
 }
 
+.meme-image {
+    width: 100%;
+}
+
 .form-input {
     border-radius: 5px;
     border: 1px solid #D5D4D8;
